--- a/cttstyles.css
+++ b/cttstyles.css
@@ -5,7 +5,7 @@ body {
     padding: 0;
 }
 body {
-        background-image: url('images/golden.jpg'); /* Substitua pelo caminho da sua imagem */
+        background-image: url('golden.jpg'); /* Substitua pelo caminho da sua imagem */
         background-size: 52%; /* Ajuste o valor conforme necessário */
         background-position: bottom;
         background-attachment: fixed;
