--- a/eistyles.css
+++ b/eistyles.css
@@ -2,7 +2,7 @@
     body {
     font-family: Verdana, Geneva, Tahoma, sans-serif, sans-serif;
     background-color: #8427c2;
-    background-image: url('background.jpg');
+    background-image: url('paws.jpg');
     background-repeat: repeat; /* A imagem será replicada */
     background-size: auto; /* Tamanho original da imagem */
     margin: 0;
