--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ body {
     padding: 20px;
     text-align: left;
     margin-right: 220px; /* Adiciona espaço para o slideshow */
-    color: white
+    color: purple
 }
 
 /* Link de Contato */
