--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ body {
 #main-content {
     padding: 20px;
     text-align: left;
-    margin-right: 220px; /* Adiciona espaço para o slideshow */
+    margin-right: 220px;
     color: rgb(83, 1, 90)
 }
 
