--- a/eistyles.css
+++ b/eistyles.css
@@ -1,10 +1,9 @@
-    body {
+#body {
     font-family: Verdana, Geneva, Tahoma, sans-serif, sans-serif;
     background-color: #8427c2;
     margin: 0;
     padding: 0;
 }
-
 #header {
     background-color: #8f0083;
     color: rgb(255, 255, 255);
