--- a/eistyles.css
+++ b/eistyles.css
@@ -1,9 +1,8 @@
-#body {
-    font-family: Verdana, Geneva, Tahoma, sans-serif, sans-serif;
-    background-color: #8427c2;
-    margin: 0;
-    padding: 0;
+/* styles.css */
+body {
+    font-family: Arial, sans-serif;
 }
+
 #header {
     background-color: #8f0083;
     color: rgb(255, 255, 255);
