--- a/produtos.css
+++ b/produtos.css
@@ -1,6 +1,6 @@
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif, sans-serif;
-    background-color: #8427c2;
+    background-color: #6102a0;
     margin: 0;
     padding: 0;
 }
