--- a/styles.css
+++ b/styles.css
@@ -110,7 +110,7 @@ body {
 }
 
 .product {
-    background-color: #440141;
+    background-color: #af2aa9;
     border: 1px solid #ccc;
     border-radius: 5px;
     padding: 5px;
