--- a/cttstyles.css
+++ b/cttstyles.css
@@ -4,7 +4,13 @@ body {
     margin: 0;
     padding: 0;
 }
-
+body {
+        background-image: url('images/golden.jpg'); /* Substitua pelo caminho da sua imagem */
+        background-size: 52%; /* Ajuste o valor conforme necessário */
+        background-position: bottom;
+        background-attachment: fixed;
+        background-repeat: no-repeat; /* Adiciona esta linha para evitar repetição */    
+}
 /* Cabeçalho */
 #header {
     background-color: rgb(137, 0, 150);
